# DakshDashora

./: .gitignore  README.md
DakshDashora-week1/: .gitignore  README.md
DakshDashora-week1/frontend/src/: index.css
Day1/: ExpenseTracker.py  expense.json
Day10(week2assessment)/: .env.example  .gitignore  README.md  assessment.txt  main.py  pyproject.toml  requirements.txt
Day10(week2assessment)/src/: agent_graph.py  data_pipeline.py  main.py  mcp_server.py  tree.txt
Day2/: requirements.txt  weather.py  weather_async.py
Day3/: package-lock.json  package.json
Day3/src/: App.jsx  index.css
Day3/src/components/: Card.jsx  CardList.jsx
Day4/hooks/: package-lock.json
Day4/hooks/src/: App.jsx  Counter.jsx  Form.jsx  Toggle.jsx
Day4/shopping/: package-lock.json  package.json
Day4/shopping/src/: App.jsx  Homepage.jsx  index.css  tree.txt
Day5(week1Assessment)/: Assessment.txt
Day5(week1Assessment)/backend/: main.py  requirements.txt  schemas.py  services.py
Day5(week1Assessment)/frontend/src/: App.jsx
Day6/: requirements.txt
Day6/src/: chat.py  chunking.py  embeddings.py  main.py  pdf_loader.py  vectordb.py
Day7/: requirements.txt  tree.txt
Day7/chroma_db/: README.md
Day7/src/: chroma_store.py  embedding_model.py  groq_model.py  main.py  pdf_loader.py  rag_chain.py  text_splitter.py
Day8/: main.py  nodes.py  pyproject.toml  requirements.txt  state.py  tools.py
Day9/: .env.example  package.json  pyproject.toml  requirements.txt
Day9/http_serv/: langclient.py  serv.py
Day9/stdio_serv/: python_client.py  server1.py
(+9 files in other folders)
