[project]
name = "day9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.3",
    "langchain-mcp-adapters>=0.2.2",
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
]
